--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     build:
       context: ../docker
       dockerfile: Dockerfile
+    environment:
+      - DISPLAY=host.docker.internal:0
     volumes:
       - ../:/home/ubuntu/drone-follows-drone
       - data:/home/ubuntu/data
