feat: add additional opencv libraries

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,10 @@ FROM python
 
 RUN apt-get update && \
     apt-get -y install sudo && \
-    apt-get -y install ffmpeg libsm6 libxext6
+    apt-get -y install ffmpeg libsm6 libxext6 && \
+    apt-get -y install x11-apps
 
-RUN pip install opencv-python
+RUN pip install opencv-python opencv-contrib-python
 
 RUN adduser ubuntu --disabled-password
 RUN sudo usermod -aG sudo ubuntu
